2024-10-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvipdfmx-lmr{0,1}.test, tests/UPJF-UTF16-{H,V},
	tests/lm.map, tests/psfonts.map,
	tests/lmr0.tex, tests/lmr0-{al,up}.dvi,
	upjf_{full,omit}.{cnf,vf}, upjf1_{full,omit}.{vf,zvp0},
	upjf2_full.{vf,zvp0}, upjv_{full,omit}.vf, Makefile.am:
	Add tests for upTeX and OFM.
	https://github.com/texjporg/tex-jp-build/issues/170

2024-10-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvipdfmx-upjf{,2,3}.test, tests/upjf.tex,
	tests/upjf{,-{hara,ipa,noto}}.map, tests/Makefike_upjf:
	Update tests. Search system texmf for tfm/otf fonts
	if kpathsearch is installed in the system.

2024-09-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfm.c: More strict check to interpret OFM FONTDIR
	as pTeX vertical writing.
	https://github.com/texjporg/tex-jp-build/issues/170#issuecomment-2295037307
	https://github.com/texjporg/tex-jp-build/issues/99
	* configure.ac: version 20240922.

2024-05-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvi.c: Remove obsolete comments.
	* dvipdfmx-upjf3.test, tests/upj{f,v}4_full.{vf,zvp0},
	tests/upjf-ipa.map, tests/Makefile_upjf, Makefile.am: Add
	a test for upTeX new encoding. It requires IPA MJ Mincho font.
	https://github.com/texjporg/tex-jp-build/issues/46

2024-05-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvi.c: Ensure enc_name "UTF16" prior to encoding conversion
	from UTF32 to UTF16.
	* dvipdfmx-upjf3.test, tests/upjf3.{tex,dvi},
	tests/upj{f,v}-h{u,i}.tfm,
	tests/upj{f,v}3_full.{vf,zvp0}, tests/upjf-noto.map,
	tests/Makefile_upjf, Makefile.am: Add a test for
	upTeX new encoding. It requires Noto Hentaigana fonts.
	https://github.com/texjporg/tex-jp-build/issues/46
	* configure.ac: version 20240511.

2024-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfm.c: Fix segfaults.
	* dvipdfmx-upjf2.test, tests/UPJF-UTF16-{H,V},
	tests/upjf-hara.map: Update tests.
	https://github.com/texjporg/tex-jp-build/issues/46
	* configure.ac: version 20240429.

2024-04-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
