@@ -1,4 +1,4 @@
-$Id: README 69813 2024-02-11 23:09:34Z karl $
+$Id: README 72881 2024-11-17 21:53:51Z karl $
 Public domain.  Originally written 2005 by Karl Berry.
 
 For a high-level overview of building TeX Live, see
@@ -48,25 +48,20 @@ x86_64-cygwin: gcc-10.2.0, cygwin-3.1.7
     LDFLAGS='-Wl,--no-insert-timestamp -Wl,--stack,0x800000'" \
   ./Build
   
-i386-freebsd amd64-freebsd:
-  Built on contextgarden, see below.
-  FreeBSD 11.4
-  upstream: https://www.freshports.org/devel/tex-web2c/
+i386-freebsd amd64-freebsd: see info at end.
 
-i386-linux: see travis below.
+i386-linux: see info at end.
 
 i386-netbsd, amd64-netbsd:
   NetBSD/amd64 9.3
   gcc version 7.5.0 (nb4 20200810)
     TL_MAKE=gmake CC=gcc CXX=g++ \
     CFLAGS=-D_NETBSD_SOURCE \
-    CXXFLAGS='-D_NETBSD_SOURCE -std=c++11' \
+    CXXFLAGS='-D_NETBSD_SOURCE -std=c++17' \
     LDFLAGS='-L/usr/X11R7/lib -Wl,-rpath,/usr/X11R7/lib' \
   ./Build --enable-xindy CLISP=/usr/local/bin/clisp
 
-i386-solaris, x86_64-solaris:
-  Built on contextgarden, see below.
-  Solaris 10, gcc 5.5.  See doc/README.solaris.
+i386-solaris, x86_64-solaris: see info at end.
 
 universal-darwin: See Master/source/mactexdoc.tar.xz.
 
@@ -81,13 +76,8 @@ x86_64-darwinlegacy:
   http://build.contextgarden.net/waterfall?tag=c/texlive
   (These links have info on all platforms built by Mojca.)
 
-i386-linux,
 x86_64-linux,
-x86_64-linuxmusl:
-  CentOS 7 Docker image with musl libc 1.1.5, plus gcc10:
-    yum -y install centos-release-scl-rh
-    yum -y install devtoolset-9-gcc-c++
-    yum install -y fontconfig-devel libX11-devel libXmu-devel libXaw-devel
-  Binaries are taken from the CI testing via github;
-  see the source/.github/* files for details on how to build,
-  and tlpkg/bin/tl-update-bindir for updating binaries (in general).
+x86_64-linuxmusl,
+and others noted above:
+  built at https://github.com/TeX-Live/texlive-source/releases.
+  see ./github/scripts/build-tl.sh.
