@@ -89,6 +89,7 @@ epspdf/epspdf.tlu
 epspdf/epspdftk.tcl
 epstopdf/epstopdf.pl
 exceltex/exceltex
+extractbb/extractbb.lua
 fig4latex/fig4latex
 findhyph/findhyph
 fontools/afm2afm
